force-app/main/default/objects/Inventory__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to customer account</description>
    <label>Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inventory (Customer)</relationshipLabel>
    <relationshipName>Inventory_Customer</relationshipName>
    <type>Lookup</type>
</CustomField>