force-app/main/default/objects/Inventory__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to asset</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Inventory</relationshipLabel>
    <relationshipName>Inventory_Asset</relationshipName>
    <type>Lookup</type>
</CustomField>