force-app/main/default/objects/Inventory__c/fields/Assigned_To_Order__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Order this inventory is assigned to</description>
    <label>Assigned To Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Inventory</relationshipLabel>
    <relationshipName>Inventory_Order</relationshipName>
    <type>Lookup</type>
</CustomField>