force-app/main/default/objects/Inventory__c/fields/Assigned_To_Quote__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Quote this inventory is provisionally assigned to</description>
    <label>Assigned To Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Inventory (Quote)</relationshipLabel>
    <relationshipName>Quote_Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>