force-app/main/default/objects/Inventory__c/fields/Breaker_Panel__c.field-meta.xml
<CustomField>
    <fullName>Breaker_Panel__c</fullName>
    <label>Breaker Panel Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>