force-app/main/default/objects/Inventory__c/fields/Breaker_Type__c.field-meta.xml
<CustomField>
    <fullName>Breaker_Type__c</fullName>
    <description>Phase type of the breaker. Values are site-specific.</description>
    <inlineHelpText>Select the breaker phase type for this unit.</inlineHelpText>
    <label>Breaker Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3 Phase</fullName>
            </value>
            <value>
                <fullName>1 Phase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>