force-app/main/default/objects/Inventory__c/fields/CabE_Count__c.field-meta.xml
<CustomField>
    <fullName>CabE_Count__c</fullName>
    <label>CabE Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>