force-app/main/default/objects/Inventory__c/fields/CabE_Size__c.field-meta.xml
<CustomField>
    <fullName>CabE_Size__c</fullName>
    <description>Cabinet equivalent size. Replaces the numeric CabE_Count__c field with standard size options.</description>
    <inlineHelpText>Cabinet equivalent size for this space unit.</inlineHelpText>
    <label>CabE Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0.125</fullName>
            </value>
            <value>
                <fullName>0.25</fullName>
            </value>
            <value>
                <fullName>0.5</fullName>
            </value>
            <value>
                <fullName>3U</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
                <default>true</default>
                <label>Full</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>