force-app/main/default/objects/Inventory__c/fields/Cage_Reference__c.field-meta.xml
<CustomField>
    <fullName>Cage_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cage Reference</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Inventory__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Space</value>
        </filterItems>
        <filterItems>
            <field>Inventory__c.Space_Type__c</field>
            <operation>equals</operation>
            <value>Cage</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Inventory</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>