force-app/main/default/objects/Inventory__c/fields/Capacity_Type__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Type__c</fullName>
    <label>Capacity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Power Circuit</fullName>
            </value>
            <value>
                <fullName>Cross Connect Port</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>