force-app/main/default/objects/Inventory__c/fields/Contract_End__c.field-meta.xml
<CustomField>
    <fullName>Contract_End__c</fullName>
    <description>Contract end date</description>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>