force-app/main/default/objects/Inventory__c/fields/Current_Rating__c.field-meta.xml
<CustomField>
    <fullName>Current_Rating__c</fullName>
    <description>Current rating (amperage) of the breaker. Values vary by site.</description>
    <inlineHelpText>Select the current rating for this breaker.</inlineHelpText>
    <label>Current Rating (A)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>15A</fullName>
            </value>
            <value>
                <fullName>16A</fullName>
            </value>
            <value>
                <fullName>20A</fullName>
            </value>
            <value>
                <fullName>30A</fullName>
            </value>
            <value>
                <fullName>32A</fullName>
            </value>
            <value>
                <fullName>40A</fullName>
            </value>
            <value>
                <fullName>50A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>