force-app/main/default/objects/Inventory__c/fields/Data_Hall__c.field-meta.xml
<CustomField>
    <fullName>Data_Hall__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data Hall</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>DataHall__c.Floor__c</field>
            <operation>equals</operation>
            <valueField>$Source.Floor__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>DataHall__c</referenceTo>
    <relationshipLabel>Inventory Items</relationshipLabel>
    <relationshipName>InventoryItems</relationshipName>
    <type>Lookup</type>
</CustomField>