force-app/main/default/objects/Inventory__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Floor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Floor__c.Site__c</field>
            <operation>equals</operation>
            <valueField>$Source.Site_Id__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Floor__c</referenceTo>
    <relationshipLabel>Inventory Items</relationshipLabel>
    <relationshipName>InventoryItems</relationshipName>
    <type>Lookup</type>
</CustomField>