force-app/main/default/objects/Inventory__c/fields/Hall__c.field-meta.xml
<CustomField>
    <fullName>Hall__c</fullName>
    <description>Hall identifier text</description>
    <label>Hall</label>
    <length>50</length>
    <type>Text</type>
</CustomField>