force-app/main/default/objects/Inventory__c/fields/Last_Synced__c.field-meta.xml
<CustomField>
    <fullName>Last_Synced__c</fullName>
    <description>Last synced from external system</description>
    <label>Last Synced</label>
    <type>DateTime</type>
</CustomField>