force-app/main/default/objects/Inventory__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Notes about this inventory</description>
    <label>Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>