force-app/main/default/objects/Inventory__c/fields/Odoo_Inventory_Id__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Inventory_Id__c</fullName>
    <description>External ID from Odoo inventory</description>
    <externalId>true</externalId>
    <label>Odoo Inventory ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>