force-app/main/default/objects/Inventory__c/fields/Odoo_Space_ID__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Space_ID__c</fullName>
    <externalId>true</externalId>
    <label>Odoo Space Reference (IP-3 Key)</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>