force-app/main/default/objects/Inventory__c/fields/Odoo_Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Sync_Error__c</fullName>
    <label>Odoo Sync Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>