force-app/main/default/objects/Inventory__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Opportunity this inventory slot is reserved for. Set by the capacity team when earmarking space for a deal at Prospect or Quote stage. Cleared on release.</description>
    <inlineHelpText>Link to the Opportunity this slot is being held for. Set during capacity confirmation; cleared when released.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Reserved Inventory</relationshipLabel>
    <relationshipName>ReservedInventory</relationshipName>
    <type>Lookup</type>
</CustomField>