force-app/main/default/objects/Inventory__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to order for this inventory</description>
    <label>Confirmed Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Inventory</relationshipLabel>
    <relationshipName>Inventory_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>