force-app/main/default/objects/Inventory__c/fields/Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to order item for this inventory</description>
    <label>Locked on Order Item</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Inventory Locked</relationshipLabel>
    <relationshipName>Inventory_OrderItems</relationshipName>
    <type>Lookup</type>
</CustomField>