force-app/main/default/objects/Inventory__c/fields/Port_Connector__c.field-meta.xml
<CustomField>
    <fullName>Port_Connector__c</fullName>
    <description>Type of port connector</description>
    <label>Port Connector Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LC Duplex</fullName>
            </value>
            <value>
                <fullName>SC Duplex</fullName>
            </value>
            <value>
                <fullName>RJ45</fullName>
            </value>
            <value>
                <fullName>Coax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>