force-app/main/default/objects/Inventory__c/fields/Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Quote line for this inventory</description>
    <label>Reserved on Quote Line</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Inventory Held</relationshipLabel>
    <relationshipName>Inventory_QuoteLines</relationshipName>
    <type>Lookup</type>
</CustomField>