force-app/main/default/objects/Inventory__c/fields/Rack_Position__c.field-meta.xml
<CustomField>
    <fullName>Rack_Position__c</fullName>
    <description>Position in rack</description>
    <label>Rack Position</label>
    <length>20</length>
    <type>Text</type>
</CustomField>