force-app/main/default/objects/Inventory__c/fields/Row__c.field-meta.xml
<CustomField>
    <fullName>Row__c</fullName>
    <description>Row identifier</description>
    <label>Row</label>
    <length>20</length>
    <type>Text</type>
</CustomField>