force-app/main/default/objects/Inventory__c/fields/Site_Code_Text__c.field-meta.xml
<CustomField>
    <fullName>Site_Code_Text__c</fullName>
    <description>Formula field that surfaces the parent Site Code as text for use in criteria-based sharing rules. Sharing rules cannot traverse lookup relationships directly.</description>
    <formula>Site_Id__r.Site_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Code (Text)</label>
    <type>Text</type>
</CustomField>