force-app/main/default/objects/Inventory__c/fields/SLA_Availability__c.field-meta.xml
<CustomField>
    <fullName>SLA_Availability__c</fullName>
    <description>SLA availability percentage for the space unit.</description>
    <inlineHelpText>Uptime SLA for this space.</inlineHelpText>
    <label>SLA Availability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>99.9</fullName>
                <label>99.9%</label>
            </value>
            <value>
                <fullName>99.95</fullName>
                <label>99.95%</label>
            </value>
            <value>
                <fullName>99.99</fullName>
                <default>true</default>
                <label>99.99%</label>
            </value>
            <value>
                <fullName>99.995</fullName>
                <label>99.995%</label>
            </value>
            <value>
                <fullName>99.999</fullName>
                <label>99.999%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>