force-app/main/default/objects/Inventory__c/fields/SLA_Humidity__c.field-meta.xml
<CustomField>
    <fullName>SLA_Humidity__c</fullName>
    <description>SLA humidity percentage for the space unit.</description>
    <inlineHelpText>Operating humidity SLA for this space.</inlineHelpText>
    <label>SLA Humidity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>35</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>50</fullName>
                <default>true</default>
                <label>50</label>
            </value>
            <value>
                <fullName>55</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>65</fullName>
            </value>
            <value>
                <fullName>70</fullName>
            </value>
            <value>
                <fullName>75</fullName>
            </value>
            <value>
                <fullName>80</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>