force-app/main/default/objects/Inventory__c/fields/SLA_Humidity_Max__c.field-meta.xml
<CustomField>
    <fullName>SLA_Humidity_Max__c</fullName>
    <description>SLA maximum humidity threshold (50-80%)</description>
    <label>SLA Humidity Max</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>50</fullName>
                <label>50%</label>
            </value>
            <value>
                <fullName>55</fullName>
                <label>55%</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>60%</label>
            </value>
            <value>
                <fullName>65</fullName>
                <label>65%</label>
            </value>
            <value>
                <fullName>70</fullName>
                <label>70%</label>
            </value>
            <value>
                <fullName>75</fullName>
                <label>75%</label>
            </value>
            <value>
                <fullName>80</fullName>
                <label>80%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>