force-app/main/default/objects/Inventory__c/fields/SLA_Humidity_Min__c.field-meta.xml
<CustomField>
    <fullName>SLA_Humidity_Min__c</fullName>
    <description>SLA minimum humidity threshold (10-50%)</description>
    <label>SLA Humidity Min</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>10%</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>15%</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>20%</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>25%</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>30%</label>
            </value>
            <value>
                <fullName>35</fullName>
                <label>35%</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>40%</label>
            </value>
            <value>
                <fullName>45</fullName>
                <label>45%</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>50%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>