force-app/main/default/objects/Inventory__c/fields/SLA_Temperature__c.field-meta.xml
<CustomField>
    <fullName>SLA_Temperature__c</fullName>
    <description>SLA temperature for the space unit in degrees Celsius.</description>
    <inlineHelpText>Operating temperature SLA for this space.</inlineHelpText>
    <label>SLA Temperature</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>18</fullName>
            </value>
            <value>
                <fullName>19</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>21</fullName>
            </value>
            <value>
                <fullName>22</fullName>
                <default>true</default>
                <label>22</label>
            </value>
            <value>
                <fullName>23</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>26</fullName>
            </value>
            <value>
                <fullName>27</fullName>
            </value>
            <value>
                <fullName>28</fullName>
            </value>
            <value>
                <fullName>29</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>