force-app/main/default/objects/Inventory__c/fields/SLA_Temperature_Max__c.field-meta.xml
<CustomField>
    <fullName>SLA_Temperature_Max__c</fullName>
    <description>SLA maximum temperature threshold (25-35 C)</description>
    <label>SLA Temperature Max</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>25</fullName>
                <label>25°C</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>26°C</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>27°C</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>28°C</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>29°C</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>30°C</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>31°C</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>32°C</label>
            </value>
            <value>
                <fullName>33</fullName>
                <label>33°C</label>
            </value>
            <value>
                <fullName>34</fullName>
                <label>34°C</label>
            </value>
            <value>
                <fullName>35</fullName>
                <label>35°C</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>