force-app/main/default/objects/Inventory__c/fields/SLA_Temperature_Min__c.field-meta.xml
<CustomField>
    <fullName>SLA_Temperature_Min__c</fullName>
    <description>SLA minimum temperature threshold (15-25 C)</description>
    <label>SLA Temperature Min</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>15</fullName>
                <label>15°C</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>16°C</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>17°C</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>18°C</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>19°C</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>20°C</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>21°C</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>22°C</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>23°C</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>24°C</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>25°C</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>