force-app/main/default/objects/Inventory__c/fields/Space_Type__c.field-meta.xml
<CustomField>
    <fullName>Space_Type__c</fullName>
    <label>Space Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cabinet</fullName>
            </value>
            <value>
                <fullName>Cage</fullName>
            </value>
            <value>
                <fullName>Hall</fullName>
            </value>
            <value>
                <fullName>Flex Office</fullName>
            </value>
            <value>
                <fullName>Data Hall</fullName>
                <isActive>false</isActive>
                <label>Data Hall</label>
            </value>
            <value>
                <fullName>Power Circuit</fullName>
                <isActive>false</isActive>
                <label>Power Circuit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>