force-app/main/default/objects/Inventory__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Inventory Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
                <default>true</default>
                <label>Available</label>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Installed</fullName>
            </value>
            <value>
                <fullName>ROFR</fullName>
            </value>
            <value>
                <fullName>Pending Available</fullName>
            </value>
            <value>
                <fullName>Stranded</fullName>
            </value>
            <value>
                <fullName>Decommissioned</fullName>
            </value>
            <value>
                <fullName>Occupied</fullName>
                <isActive>false</isActive>
                <label>Occupied</label>
            </value>
            <value>
                <fullName>Quoted</fullName>
                <isActive>false</isActive>
                <label>Quoted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>