force-app/main/default/objects/Inventory__c/fields/TH_Sensor_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>TH_Sensor_Group_ID__c</fullName>
    <description>Temperature/Humidity sensor group identifier for this space inventory unit.</description>
    <label>TH Sensor Group ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>