force-app/main/default/objects/Inventory__c/fields/Total_Area_sqm__c.field-meta.xml
<CustomField>
    <fullName>Total_Area_sqm__c</fullName>
    <description>Total area in square meters</description>
    <label>Total Area (sqm)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>