force-app/main/default/objects/Inventory__c/fields/Total_Capacity_kVA__c.field-meta.xml
<CustomField>
    <fullName>Total_Capacity_kVA__c</fullName>
    <description>Total capacity in kilovolt-amperes</description>
    <label>Average Power per Cab (kVA)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>