force-app/main/default/objects/Inventory__c/fields/Total_IT_Power_kVA__c.field-meta.xml
<CustomField>
    <fullName>Total_IT_Power_kVA__c</fullName>
    <description>Total IT power in kilovolt-amperes</description>
    <label>Contracted Power (kVA)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>