force-app/main/default/objects/Inventory__c/fields/Total_kW__c.field-meta.xml
<CustomField>
    <fullName>Total_kW__c</fullName>
    <description>Total power in kilowatts</description>
    <label>Total (kW)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>