force-app/main/default/objects/Inventory__c/fields/Unit_Reference__c.field-meta.xml
<CustomField>
    <fullName>Unit_Reference__c</fullName>
    <label>Other Inventory Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>