force-app/main/default/objects/Inventory__c/fields/Usage_Type__c.field-meta.xml
<CustomField>
    <fullName>Usage_Type__c</fullName>
    <description>Usage type for Cabinet spaces. Determines the naming convention letter: Shared=S, Private Cage=C, Private Hall=H.</description>
    <inlineHelpText>Shared (S), Private Cage (C), or Private Hall (H). Affects the auto-generated inventory name.</inlineHelpText>
    <label>Usage Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shared</fullName>
                <default>true</default>
                <label>Shared</label>
            </value>
            <value>
                <fullName>Private Cage</fullName>
            </value>
            <value>
                <fullName>Private Hall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>