force-app/main/default/objects/Inventory__c/fields/Voltage_Rating__c.field-meta.xml
<CustomField>
    <fullName>Voltage_Rating__c</fullName>
    <description>Voltage rating of the breaker. Values vary by site.</description>
    <inlineHelpText>Select the voltage rating for this breaker.</inlineHelpText>
    <label>Voltage Rating (V)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100V</fullName>
            </value>
            <value>
                <fullName>120V</fullName>
            </value>
            <value>
                <fullName>200V</fullName>
            </value>
            <value>
                <fullName>230V</fullName>
            </value>
            <value>
                <fullName>240V</fullName>
            </value>
            <value>
                <fullName>380V</fullName>
            </value>
            <value>
                <fullName>400V</fullName>
            </value>
            <value>
                <fullName>415V</fullName>
            </value>
            <value>
                <fullName>200/208V</fullName>
            </value>
            <value>
                <fullName>220V</fullName>
            </value>
            <value>
                <fullName>250V</fullName>
            </value>
            <value>
                <fullName>440V</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>