force-app/main/default/objects/Inventory__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <description>Zone identifier</description>
    <label>Zone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>