force-app/main/default/objects/Inventory__c/recordTypes/Breaker.recordType-meta.xml
<RecordType>
    <fullName>Breaker</fullName>
    <active>false</active>
    <label>Breaker (Legacy)</label>
</RecordType>