force-app/main/default/objects/Inventory__c/recordTypes/Inventory_Breaker.recordType-meta.xml
<RecordType>
    <fullName>Inventory_Breaker</fullName>
    <active>true</active>
    <description>Breaker inventory - power circuits (circuit breakers).</description>
    <label>Breaker</label>
</RecordType>