force-app/main/default/objects/Inventory__c/recordTypes/Inventory_Space.recordType-meta.xml
<RecordType>
    <fullName>Inventory_Space</fullName>
    <active>true</active>
    <description>Cabinet, Hall, Cage</description>
    <label>Space</label>
</RecordType>