force-app/main/default/objects/Inventory__c/recordTypes/Space.recordType-meta.xml
<RecordType>
    <fullName>Space</fullName>
    <active>false</active>
    <label>Space (Legacy)</label>
</RecordType>